Redesigned structure. Should be more resilient. Idea of flex is clicking. I've done a very simple layout. Next will be figuring out how to style calc then js

--- a/index.html
+++ b/index.html
@@ -9,46 +9,49 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-
-
 <body>
-    <div>
-        <div class="card">
-            <div class="container">
-                <div class="screen">
-                    <div class="stored">1234567891234567</div>
-                    <div class="entered">123456789</div>
-                </div>
-                <div class="first">
-                    <div class="button">7</div>
-                    <div class="button">8</div>
-                    <div class="button">9</div>
-                    <div class="button">C</div>
-                    <div class="button">AC</div>
-                </div>
-                <div class="second">
-                    <div class="button">4</div>
-                    <div class="button">5</div>
-                    <div class="button">6</div>
-                    <div class="button">/</div>
-                    <div class="button">X</div>
-                </div>
-                <div class="third">
-                    <div class="button">1</div>
-                    <div class="button">2</div>
-                    <div class="button">3</div>
-                    <div class="button">+</div>
-                    <div class="button">-</div>
-                </div>
-                <div class="fourth">
-                    <div class="button">+/-</div>
-                    <div class="button">0</div>
-                    <div class="button">.</div>
-                    <div class="button" id="equals">=</div>
-                </div>
+
+    <h1>Calculator</h1>
+    <div class="container">
+        <div class="screen">
+            <!-- Going to have to find a limit for how many nubers you can add -->
+            <div class="input">1,000,000,000,000,000,000,000,000, 000,000,000,000,000,000,000,000
+            </div>
+            <div class="output">1,000,000,000,000,000,000,000,000, 000,000,000,000,000,000,000,000
+
+            </div>
+        </div>
+        <div class="buttons">
+            <div class="row">
+                <div class="col">7</div>
+                <div class="col">8</div>
+                <div class="col">9</div>
+                <div class="col">C</div>
+                <div class="col">AC</div>
+            </div>
+            <div class="row">
+                <div class="col">4</div>
+                <div class="col">5</div>
+                <div class="col">6</div>
+                <div class="col">/</div>
+                <div class="col">*</div>
+            </div>
+            <div class="row">
+                <div class="col">1</div>
+                <div class="col">2</div>
+                <div class="col">3</div>
+                <div class="col">+</div>
+                <div class="col">-</div>
+            </div>
+            <div class="row">
+                <div class="col">+/-</div>
+                <div class="col">0</div>
+                <div class="col">.</div>
+                <div class="col" id="double">=</div>
             </div>
         </div>
     </div>
+
 </body>
 
 </html>
