added folder for redo - created html and css for calculator

--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <div class="container">
         <div class="screen">
             <!-- Going to have to find a limit for how many nubers you can add -->
-            <div class="input">1,000,000,000,000,000,000,000,000, 000,000,000,000,000,000,000,000
+            <div class="output">1,000,000,000,000,000,000,000,000, 000,000,,000,000,000,000,000
             </div>
-            <div class="output">1,000,000,000,000,000,000,000,000, 000,000,000,000,000,000,000,000
+            <div class="input">1000000000000000000000000000000</div>
 
-            </div>
         </div>
         <div class="buttons">
             <div class="row">
@@ -51,7 +50,7 @@
             </div>
         </div>
     </div>
-
+    <script src="app.js"></script>
 </body>
 
 </html>
