--- a/index.html
+++ b/index.html
@@ -28,40 +28,40 @@
             </div>
             <div class="buttons">
                 <div class="row" id="first-row">
-                    <div class="calc-but">/</div>
-                    <div class="calc-but">*</div>
-                    <div class="calc-but">-</div>
-                    <div class="calc-but">+</div>
+                    <div class="calc-but" id="divide">/</div>
+                    <div class="calc-but" id="multiply">*</div>
+                    <div class="calc-but" id="subtract">-</div>
+                    <div class="calc-but" id="add">+</div>
                 </div>
                 <div class="row" id="second-row">
-                    <div class="calc-but">7</div>
-                    <div class="calc-but">8</div>
-                    <div class="calc-but">9</div>
-                    <div class="calc-but">C</div>
+                    <div class="calc-but" id="seven">7</div>
+                    <div class="calc-but" id="eight">8</div>
+                    <div class="calc-but" id="nine">9</div>
+                    <div class="calc-but" id="c">C</div>
                 </div>
                 <div class="row" id="third-row">
-                    <div class="calc-but">4</div>
-                    <div class="calc-but">5</div>
-                    <div class="calc-but">6</div>
-                    <div class="calc-but">CE</div>
+                    <div class="calc-but" id="four">4</div>
+                    <div class="calc-but" id="five">5</div>
+                    <div class="calc-but" id="six">6</div>
+                    <div class="calc-but" id="ce">CE</div>
                 </div>
                 <div class="row" id="fourth-row">
-                    <div class="calc-but">1</div>
-                    <div class="calc-but">2</div>
-                    <div class="calc-but">3</div>
-                    <div class="calc-but">
-                        REM </div>
+                    <div class="calc-but" id="one">1</div>
+                    <div class="calc-but" id="two">2</div>
+                    <div class="calc-but" id="three">3</div>
+                    <div class="calc-but" id="delete">
+                        DEL </div>
                 </div>
                 <div class="row" id="fifth-row">
-                    <div class="calc-but">0</div>
-                    <div class="calc-but">.</div>
-                    <div class="calc-but">=</div>
+                    <div class="calc-but" id="zero">0</div>
+                    <div class="calc-but" id="decimal">.</div>
+                    <div class="calc-but" id="equal">=</div>
                 </div>
 
             </div>
         </div>
     </div>
-
+    <script src="app.js"></script>
 </body>
 
 </html>
