added functionality to input one number then add an operator. Next need to update the input so that a new number is store. Getting there in terms of full functionality

--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
         <div class="calculator">
 
             <div class="display">
-
-                <div class="input">
-                    <!--35chars-->
-                    10
-                </div>
+                <!--35chars-->
+                <div class="input"></div>
                 <div class="output">
                     947 </div>
             </div>
