added more functionslity - nearly there need to change outputs to make it more like a calculator and add decimal

--- a/index.html
+++ b/index.html
@@ -17,20 +17,21 @@
                 <!--35chars-->
                 <div class="input"></div>
                 <div class="output">
-                    947 </div>
+                </div>
             </div>
             <div class="buttons">
                 <div class="row" id="first-row">
                     <div class="calc-but" id="divide">/</div>
                     <div class="calc-but" id="multiply">*</div>
                     <div class="calc-but" id="subtract">-</div>
-                    <div class="calc-but" id="add">+</div>
+
                 </div>
                 <div class="row" id="second-row">
                     <div class="calc-but" id="seven">7</div>
                     <div class="calc-but" id="eight">8</div>
                     <div class="calc-but" id="nine">9</div>
-                    <div class="calc-but" id="c">C</div>
+                    <div class="calc-but" id="add">+</div>
+
                 </div>
                 <div class="row" id="third-row">
                     <div class="calc-but" id="four">4</div>
@@ -42,8 +43,8 @@
                     <div class="calc-but" id="one">1</div>
                     <div class="calc-but" id="two">2</div>
                     <div class="calc-but" id="three">3</div>
-                    <div class="calc-but" id="delete">
-                        DEL </div>
+                    <div class="calc-but" id="c">
+                        C </div>
                 </div>
                 <div class="row" id="fifth-row">
                     <div class="calc-but" id="zero">0</div>
