Added fixes and changed the design to show on output instead

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             <div class="display">
                 <!--35chars-->
                 <div class="input"></div>
-                <div class="output">
-                </div>
+                <div class="output"></div>
             </div>
             <div class="buttons">
                 <div class="row" id="first-row">
