--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
         </div>
     </div>
-    <script src="app2.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
